# horse-racing

./: .env.example  .gitignore  .hadolint.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  rules.md
.claude/: settings.json
.claude/hooks/: block-auto-merge.sh
.claude/rules/: cost-management.md  document-update.md  issue-creation.md  no-local-training.md  pr-merge-checklist.md
.claude/skills/add-features/: SKILL.md
.claude/skills/address-review-findings/: SKILL.md
.claude/skills/import-data/: SKILL.md
.claude/skills/preview-report/: SKILL.md
.claude/skills/review-accuracy/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/run-pipeline/: SKILL.md
.claude/skills/run-pipeline-dev/: SKILL.md
.github/workflows/: deploy-mlflow.yaml  deploy.yaml  lint.yaml  preview-deploy.yaml  test.yaml
config/: base.yaml  dev.yaml  prod.yaml
docs/: architecture.md  model_verification.md  setup.md
docs/verification/: temporal_leakage_check.md
infrastructure/mlflow/: Dockerfile
infrastructure/terraform/: dev.tfvars  main.tf  mlflow.tf  outputs.tf  prod.tfvars  variables.tf
scripts/: README.md
src/common/: config.py  gcp_client.py  logging.py  mlflow_auth.py
src/data_collector/: __init__.py  __main__.py  jra_client.py  kaggle_loader.py  schemas.py
src/data_collector/collectors/: __init__.py  (+3 more)
src/evaluator/: __init__.py  backtest_engine.py  metrics.py  monitor.py  reporter.py
src/feature_engineering/: __init__.py  feature_store.py  pipeline.py
src/model_training/: __init__.py  compare_experiments.py  experiment_tracker.py  model_registry.py  trainer.py  tuner.py
src/pipeline/: __init__.py  __main__.py  data_preparer.py  orchestrator.py
src/predictor/: __init__.py  __main__.py  batch_predictor.py  model_loader.py  prediction_pipeline.py
tests/: conftest.py
tests/fixtures/: kaggle_sample.csv  sample_data.json
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_data_collector.py  test_evaluator.py  test_feature_engineering.py  test_kaggle_loader.py  test_mlflow_auth.py  test_mlflow_integration.py  test_model_training.py  test_pipeline.py  test_predictor.py
(+27 files in other folders)
